--- a/slivki_bot_admin/slivki_bot/templates/index.html
+++ b/slivki_bot_admin/slivki_bot/templates/index.html
@@ -8,7 +8,7 @@
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
-<div method="POST" class="post-form" action="/emp">
+<form method="POST" class="post-form" action="/emp">
     {% csrf_token %}
     <div class="container">
         <br>
@@ -98,7 +98,7 @@
         </div>
 
     </div>
-</div>
+</form>
 
 </body>
 </html>
